# miniQC

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
miniqc/: application.py  fmri_plots.py  miniqc.py  miniqc_bids.py  miniqc_glob.py  mri_viz.py  parsers.py
